<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.ExtendSubscriptionFragment"
    android:backgroundTint="@color/colorPrimary">
    <TextView
        android:id="@+id/turnsLeftLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.Squads.Label"
        android:backgroundTint="@android:color/transparent"
        android:text="@string/turns_left_label" />

    <TextView
        android:id="@+id/turnsLeft"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="3"
        style="@style/TextAppearance.Squads.Title.Dark"/>

    <TextView
        android:id="@+id/newTurnsLeftLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.Squads.Label"
        android:backgroundTint="@android:color/transparent"
        android:text="@string/new_turns_left" />

    <TextView
        android:id="@+id/newTurnsLeft"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="13"
        style="@style/TextAppearance.Squads.Title.Dark"/>

    <TextView
        android:id="@+id/priceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.Squads.Label"
        android:backgroundTint="@android:color/transparent"
        android:text="@string/price" />

    <TextView
        android:id="@+id/price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="80€"
        style="@style/TextAppearance.Squads.Title.Dark" />
</LinearLayout>