<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/colorPrimary">


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/backAppBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorSecondary"
        android:clickable="true"
        android:scrollbarThumbHorizontal="@color/colorSecondary"
        android:scrollbarThumbVertical="@color/colorSecondary"
        android:theme="@style/Widget.Squads.Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
        app:title="@string/session_title"
        app:titleCentered="true"
        app:titleTextAppearance="@style/TextAppearance.AppCompat.Large" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="ltr"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/backAppBar"
        android:backgroundTint="@color/colorPrimary"
        tools:layout_editor_absoluteX="8dp">

        <ImageView
            android:id="@+id/workoutIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:layout_marginTop="36dp"
            app:srcCompat="@mipmap/ic_workout_dark_foreground" />

        <TextView
            android:id="@+id/workoutType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            style="@style/TextAppearance.Squads.SubTitle.Dark"
            android:backgroundTint="@color/colorPrimary"
            android:text="Workout type"
            android:textAppearance="?attr/textAppearanceBody1"/>

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Date"
            android:textAppearance="?attr/textAppearanceBody1"
            style="@style/TextAppearance.Squads.SubTitle.Dark"
            android:backgroundTint="@color/colorPrimary" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Time"
            android:textAppearance="?attr/textAppearanceBody1"
            style="@style/TextAppearance.Squads.SubTitle.Dark"
            android:backgroundTint="@color/colorPrimary" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="36dp"
            app:dividerInsetEnd="16dp"
            app:dividerInsetStart="16dp" />

        <TextView
            android:id="@+id/trainees"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trainees"
            style="@style/TextAppearance.Squads.SubTitle.Dark"
            android:backgroundTint="@color/colorPrimary"/>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="36dp"
            app:dividerInsetEnd="16dp"
            app:dividerInsetStart="16dp" />

        <TextView
            android:id="@+id/desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="Description"
            android:textAppearance="?attr/textAppearanceBody1"
            style="@style/TextAppearance.Squads.Label"
            android:backgroundTint="@color/colorPrimary"
            />

    </LinearLayout>

    <Button
        android:id="@+id/join_button"
        style="@style/Widget.Material3.Button.IconButton.Filled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@color/colorAccent"
        android:backgroundTint="@color/colorPrimaryDark"
        android:clickable="true"
        android:text="@string/join_button"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.Squads.SubTitle"
        android:textColor="@color/colorPrimary"
        app:backgroundTint="@color/colorPrimaryDark"
        app:iconSize="30dp"
        app:iconTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="@color/colorAccent" />

</androidx.constraintlayout.widget.ConstraintLayout>
    </layout>
